# stonesoup

./: .env.example  .gitignore  CLAUDE.md  MVP_ACTION_PLAN.md  docker-compose.yml  explore_db.py  github_tutorial.md  guidance_clerk.md
docker/: backend.Dockerfile  frontend.Dockerfile  init-db.sql
docs/: env-setup.md  plan.md  postponed-features.md  prd.md  railway-integration.md  status-report.md
docs/architecture/: README.md
docs/architecture/decisions/: ADR-001-mvp-simplifications.md  ADR-002-multi-tenancy-preparation.md  ADR-003-embedding-strategy.md
src/agents/: __init__.py  config.py  example_usage.py  main_graph.py  pyproject.toml
src/agents/edges/: __init__.py  router.py
src/agents/nodes/: __init__.py  base_node.py  extraction_node.py  ingestion_node.py  story_generation_node.py  validation_node.py
src/agents/state/: __init__.py  agent_state.py
src/backend/: .env.example  CLERK_AUTH_IMPLEMENTATION.md  Dockerfile  MIGRATION_INSTRUCTIONS.md  PGVECTOR_SETUP.md  README.md  SEED_DATA_README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt  run_migrations.py  seed_database.py  setup_db.sh  setup_seed_environment.py  startup.py  test_auth_example.py  test_openrouter.py  test_railway_config.py  validate_seed_data.py  verify_pgvector.py
src/backend/alembic/: env.py
src/backend/alembic/versions/: 001_initial_migration.py
src/backend/app/: __init__.py  main.py
src/backend/app/ai/: __init__.py  gemini_client.py  openrouter_client.py
src/backend/app/api/: deps.py
src/backend/app/api/v1/: api.py
src/backend/app/api/v1/endpoints/: auth.py  members.py  search.py  stories.py
src/backend/app/core/: auto_config.py  config.py  railway_client.py  security.py
src/backend/app/db/: base.py  base_class.py  session.py
src/backend/app/middleware/: __init__.py  auth.py
src/backend/app/models/: __init__.py  cauldron.py  member.py  story.py
src/backend/app/schemas/: __init__.py  common.py  member.py  search.py  story.py
src/backend/app/services/: ai_summary_service.py  search_service.py
src/backend/scripts/: setup_pgvector.sh
src/backend/seed_data/: __init__.py  embedding_generator.py  sample_members.py  sample_stories.py
src/backend/tests/: test_health.py
src/frontend/: SEARCH_INTERFACE_README.md  middleware.ts  next.config.ts  package-lock.json  package.json  sentry.client.config.ts  sentry.edge.config.ts
src/frontend/app/: globals.css  layout.tsx  test-simple.css
src/frontend/app/debug/: page.tsx
src/frontend/app/search/: page.tsx
src/frontend/app/style-test/: page.tsx
src/frontend/app/test/: page.tsx
src/frontend/components/search/: index.ts  member-card.tsx  search-bar.tsx  search-page.tsx  search-results.tsx  story-card.tsx
src/frontend/components/ui/: error-boundary.tsx  index.ts  loading-skeleton.tsx  loading-spinner.tsx
src/frontend/lib/: api.ts  types.ts
