[project]
name = "stonesoup-agents"
version = "0.1.0"
description = "LangGraph agents for STONESOUP AI orchestration"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # LangChain and LangGraph
    "langchain>=0.1.5",
    "langgraph>=0.0.26",
    "langsmith>=0.1.0",
    
    # AI/ML
    "google-generativeai>=0.3.2",
    "openai>=1.10.0",
    "tiktoken>=0.5.2",
    
    # Vector stores
    "pgvector>=0.2.4",
    
    # Utilities
    "pydantic>=2.5.3",
    "tenacity>=8.2.3",
    "httpx>=0.26.0",
    
    # Async support
    "asyncio>=3.4.3",
    "aiofiles>=23.2.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.4",
    "pytest-asyncio>=0.23.3",
    "black>=24.1.1",
    "ruff>=0.1.14",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"